kind/k8s_config/django/django-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: django
